la estructura del CV esta lista

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div>
-      <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
+    <div class="main-column">
+      <!-- <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
       <h4 class="translated">
         Hey Xtranger, this is WorkInProgress 👨🏻‍💻, thanks for visiting! 🛠️
       </h4>
@@ -25,163 +25,210 @@
         ————————————————————————————————————————————————————————————————————————————————————
       </h4>
       <br />
-      <br />
-      <div class="job-experience-wrapper">
-        <!-- CARD #1 -->
-        <div class="card-exp">
-          <div class="card-exp__header-wrapper">
-            <h2 class="card-exp__role">Product Designer</h2>
-            <span
-              class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
-            >
-              B2B
-            </span>
-            <span class="tag tag--primary">Corporation</span>
-          </div>
+      <br /> -->
 
-          <h3 class="card-exp__company-name">at PSH - @Follett</h3>
-          <div class="card-exp__industry-and-duration-wrapper">
-            <h3 class="card-exp__company-industry">Edutech</h3>
-            <span class="card-exp__company-starting-date">mar/2024</span>
-            <span class="card-exp__company-separator">|</span>
-            <span
-              class="card-exp__company-ending-date card-exp__company-ending-date--present"
-            >
-              Present
-            </span>
-          </div>
-          <div class="card-exp__prod-keywords-wrapper">
-            <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
-            <h4 class="tag card-exp__prod-built">SaaS</h4>
-          </div>
-
-          <p class="card-exp__summary">
-            Optimized the adoption process for course materials and supplies in
-            an app primarily focused on Concierge and Faculty users, easing
-            their workload and ultimately delivering value to students as the
-            end users.
-          </p>
-
-          <ul class="card-exp__responsabilities__wrapper">
-            <li class="card-exp__responsabilities">
-              Guided the design process from concept to implementation,
-              facilitating smooth transitions and successful project outcomes.
-            </li>
-            <li class="card-exp__responsabilities">
-              Collaborated closely with leadership to transform feature requests
-              from ideation to delivery.
-            </li>
-            <li class="card-exp__responsabilities">
-              Created detailed handoffs for the development team, ensuring clear
-              and actionable design specifications.
-            </li>
-            <li class="card-exp__responsabilities">
-              Designed and documented components in Figma, providing
-              comprehensive guidelines to ensure consistency and ease of use.
-            </li>
-            <li class="card-exp__responsabilities">
-              I participated in the user interview process alongside the design
-              team; taking notes and defining the product based on research.
-            </li>
-          </ul>
-
-          <div class="card-exp__keywords_wrapper">
-            <span class="tag tag--secondary">Product Delivery</span>
-            <span class="tag tag--secondary">UX Design</span>
-            <span class="tag tag--secondary">UX Research</span>
-            <span class="tag tag--secondary">User Testing</span>
-            <span class="tag tag--secondary">User Interviews</span>
-            <span class="tag tag--secondary">UI Design</span>
-            <span class="tag tag--secondary">Prototype</span>
-            <span class="tag tag--secondary">Interaction Design</span>
-            <span class="tag tag--secondary">Figma</span>
-            <span class="tag tag--secondary">Design System</span>
-            <span class="tag tag--secondary">FigJam</span>
-            <span class="tag tag--secondary">UX Writing</span>
-            <span class="tag tag--secondary">Visual Design</span>
-            <span class="tag tag--secondary">Design Thinking</span>
-            <span class="tag tag--secondary">Agile</span>
-          </div>
+      <!-- TITLE; NAME AND ROLE -->
+      <div class="main-description-wrapper">
+        <div class="main-description__title-wrapper">
+          <h1 class="main-description__title">Lenin Cuadra</h1>
+          <h2>Product Designer</h2>
+          <h2>UX/UI</h2>
+          <p class="main-description__divider">—————————————</p>
+          <p class="main-description__year-of-exp">4+ years of Experience</p>
         </div>
-        <!-- CARD #2 -->
-        <div class="card-exp">
-          <div class="card-exp__header-wrapper">
-            <h2 class="card-exp__role">Product Designer</h2>
-            <span
-              class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
-            >
-              B2B2C
-            </span>
-            <span class="tag tag--primary">Startup</span>
-          </div>
-
-          <h3 class="card-exp__company-name">at Flevo</h3>
-          <div class="card-exp__industry-and-duration-wrapper">
-            <h3 class="card-exp__company-industry">Fintech / Edutech</h3>
-            <span class="card-exp__company-starting-date">jan/2023</span>
-            <span class="card-exp__company-separator">|</span>
-            <span class="card-exp__company-starting-date">dec/2023</span>
-          </div>
-          <div class="card-exp__prod-keywords-wrapper">
-            <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
-            <h4 class="tag card-exp__prod-built">SaaS</h4>
-            <h4 class="tag card-exp__prod-built">Checkout</h4>
-            <h4 class="tag card-exp__prod-built">Loans</h4>
-            <h4 class="tag card-exp__prod-built">Funnel</h4>
-          </div>
-
-          <p class="card-exp__summary">
-            I defined and crafted user-centered UX/UI experiences for multiple
-            products with a strong focus on product mindset within a dynamic
-            startup environment.
+        <div class="main-description__content">
+          <p>
+            I'm an experienced UX/UI and Product Design professional, excelling
+            in creative problem-solving. Grounded in Design Thinking, I
+            strategically craft meaningful user experiences.
           </p>
-
-          <ul class="card-exp__responsabilities__wrapper">
-            <li class="card-exp__responsabilities">
-              Building different types of Checkout: Vendors, Students, and a
-              customized Button Checkout.
+          <p>
+            I collaborate seamlessly with cross-functional teams, engaging
+            developers, designers, and product managers, ensuring a holistic
+            approach to product design.
+          </p>
+        </div>
+        <div class="main-description__contact grid-item2">
+          <h3>Contact Info</h3>
+          <ul>
+            <li class="main-description__contact-link">
+              leningraphic@gmail.com
             </li>
-            <li class="card-exp__responsabilities">
-              Designing and optimizing end-to-end customer acquisition funnels
-              to drive new customer acquisition.
-            </li>
-            <li class="card-exp__responsabilities">
-              I developed a robust cell component with dynamic data and behavior
-              to construct complex table
-            </li>
-            <li class="card-exp__responsabilities">
-              I created a robust cell component to build a complex table with
-              different type of data and behaviors.
-            </li>
-            <li class="card-exp__responsabilities">
-              Revamping and enhancing user experiences across multiple products,
-              including the checkout process, funnel, and SaaS application
-            </li>
+            <li class="main-description__contact-link">549 3513766049</li>
           </ul>
+        </div>
+      </div>
 
-          <div class="card-exp__keywords_wrapper">
-            <span class="tag tag--secondary">Product Discovery</span>
-            <span class="tag tag--secondary">Product Delivery</span>
-            <span class="tag tag--secondary">Product Roadmap</span>
-            <span class="tag tag--secondary">Product Marketing</span>
-            <span class="tag tag--secondary">UX Design</span>
-            <span class="tag tag--secondary">UX Research</span>
-            <span class="tag tag--secondary">User Testing</span>
-            <span class="tag tag--secondary">User Interviews</span>
-            <span class="tag tag--secondary">Clarity</span>
-            <span class="tag tag--secondary">Google Forms</span>
-            <span class="tag tag--secondary">UI Design</span>
-            <span class="tag tag--secondary">Prototype</span>
-            <span class="tag tag--secondary">Interaction Design</span>
-            <span class="tag tag--secondary">Figma</span>
-            <span class="tag tag--secondary">Design System</span>
-            <span class="tag tag--secondary">HTML/CSS</span>
-            <span class="tag tag--secondary">Workshop Facilitation</span>
-            <span class="tag tag--secondary">FigJam</span>
-            <span class="tag tag--secondary">UX Writing</span>
-            <span class="tag tag--secondary">Visual Design</span>
-            <span class="tag tag--secondary">Design Thinking</span>
-            <span class="tag tag--secondary">Agile</span>
+      <!-- ADD COLUMN GRID FOR 2 ITEMS BELOW -->
+      <div class="grid-item3">
+        <div class="card-wrapper">
+          <!-- CARD #1 -->
+          <div class="job-experience-wrapper">
+            <div class="card-exp">
+              <div class="card-exp__header-wrapper">
+                <h2 class="card-exp__role">Product Designer</h2>
+                <div class="card-exp__business-tags">
+                  <span
+                    class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
+                  >
+                    B2B
+                  </span>
+                  <span class="tag tag--primary">Corporation</span>
+                </div>
+              </div>
+
+              <h3 class="card-exp__company-name">at PSH - @Follett</h3>
+              <div class="card-exp__industry-and-duration-wrapper">
+                <h3 class="card-exp__company-industry">Edutech</h3>
+                <span class="card-exp__company-starting-date">mar/2024</span>
+                <span class="card-exp__company-separator">|</span>
+                <span
+                  class="card-exp__company-ending-date card-exp__company-ending-date--present"
+                >
+                  Present
+                </span>
+              </div>
+              <div class="card-exp__prod-keywords-wrapper">
+                <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
+                <h4 class="tag card-exp__prod-built">SaaS</h4>
+              </div>
+
+              <p class="card-exp__summary">
+                Optimized the adoption process for course materials and supplies
+                in an app primarily focused on Concierge and Faculty users,
+                easing their workload and ultimately delivering value to
+                students as the end users.
+              </p>
+
+              <ul class="card-exp__responsabilities__wrapper">
+                <li class="card-exp__responsabilities">
+                  Guided the design process from concept to implementation,
+                  facilitating smooth transitions and successful project
+                  outcomes.
+                </li>
+                <li class="card-exp__responsabilities">
+                  Collaborated closely with leadership to transform feature
+                  requests from ideation to delivery.
+                </li>
+                <li class="card-exp__responsabilities">
+                  Created detailed handoffs for the development team, ensuring
+                  clear and actionable design specifications.
+                </li>
+                <li class="card-exp__responsabilities">
+                  Designed and documented components in Figma, providing
+                  comprehensive guidelines to ensure consistency and ease of
+                  use.
+                </li>
+                <li class="card-exp__responsabilities">
+                  I participated in the user interview process alongside the
+                  design team; taking notes and defining the product based on
+                  research.
+                </li>
+              </ul>
+
+              <div class="card-exp__keywords_wrapper">
+                <span class="tag tag--secondary">Product Delivery</span>
+                <span class="tag tag--secondary">UX Design</span>
+                <span class="tag tag--secondary">UX Research</span>
+                <span class="tag tag--secondary">User Testing</span>
+                <span class="tag tag--secondary">User Interviews</span>
+                <span class="tag tag--secondary">UI Design</span>
+                <span class="tag tag--secondary">Prototype</span>
+                <span class="tag tag--secondary">Interaction Design</span>
+                <span class="tag tag--secondary">Figma</span>
+                <span class="tag tag--secondary">Design System</span>
+                <span class="tag tag--secondary">FigJam</span>
+                <span class="tag tag--secondary">UX Writing</span>
+                <span class="tag tag--secondary">Visual Design</span>
+                <span class="tag tag--secondary">Design Thinking</span>
+                <span class="tag tag--secondary">Agile</span>
+              </div>
+            </div>
+            <!-- CARD #2 -->
+            <div class="card-exp">
+              <div class="card-exp__header-wrapper">
+                <h2 class="card-exp__role">Product Designer</h2>
+                <div class="card-exp__business-tags">
+                  <span
+                    class="tag tag--primary card-exp__business-tag--highlight card-exp__business-model"
+                  >
+                    B2B2C
+                  </span>
+                  <span class="tag tag--primary">Startup</span>
+                </div>
+              </div>
+
+              <h3 class="card-exp__company-name">at Flevo</h3>
+              <div class="card-exp__industry-and-duration-wrapper">
+                <h3 class="card-exp__company-industry">Fintech / Edutech</h3>
+                <span class="card-exp__company-starting-date">jan/2023</span>
+                <span class="card-exp__company-separator">|</span>
+                <span class="card-exp__company-starting-date">dec/2023</span>
+              </div>
+              <div class="card-exp__prod-keywords-wrapper">
+                <h4 class="card-exp__prod-keywords">Key Designed Products</h4>
+
+                <h4 class="tag card-exp__prod-built">SaaS</h4>
+                <h4 class="tag card-exp__prod-built">Checkout</h4>
+                <h4 class="tag card-exp__prod-built">Loans</h4>
+                <h4 class="tag card-exp__prod-built">Funnel</h4>
+              </div>
+
+              <p class="card-exp__summary">
+                I defined and crafted user-centered UX/UI experiences for
+                multiple products with a strong focus on product mindset within
+                a dynamic startup environment.
+              </p>
+
+              <ul class="card-exp__responsabilities__wrapper">
+                <li class="card-exp__responsabilities">
+                  Building different types of Checkout: Vendors, Students, and a
+                  customized Button Checkout.
+                </li>
+                <li class="card-exp__responsabilities">
+                  Designing and optimizing end-to-end customer acquisition
+                  funnels to drive new customer acquisition.
+                </li>
+                <li class="card-exp__responsabilities">
+                  I developed a robust cell component with dynamic data and
+                  behavior to construct complex table
+                </li>
+                <li class="card-exp__responsabilities">
+                  I created a robust cell component to build a complex table
+                  with different type of data and behaviors.
+                </li>
+                <li class="card-exp__responsabilities">
+                  Revamping and enhancing user experiences across multiple
+                  products, including the checkout process, funnel, and SaaS
+                  application
+                </li>
+              </ul>
+
+              <div class="card-exp__keywords_wrapper">
+                <span class="tag tag--secondary">Product Discovery</span>
+                <span class="tag tag--secondary">Product Delivery</span>
+                <span class="tag tag--secondary">Product Roadmap</span>
+                <span class="tag tag--secondary">Product Marketing</span>
+                <span class="tag tag--secondary">UX Design</span>
+                <span class="tag tag--secondary">UX Research</span>
+                <span class="tag tag--secondary">User Testing</span>
+                <span class="tag tag--secondary">User Interviews</span>
+                <span class="tag tag--secondary">Clarity</span>
+                <span class="tag tag--secondary">Google Forms</span>
+                <span class="tag tag--secondary">UI Design</span>
+                <span class="tag tag--secondary">Prototype</span>
+                <span class="tag tag--secondary">Interaction Design</span>
+                <span class="tag tag--secondary">Figma</span>
+                <span class="tag tag--secondary">Design System</span>
+                <span class="tag tag--secondary">HTML/CSS</span>
+                <span class="tag tag--secondary">Workshop Facilitation</span>
+                <span class="tag tag--secondary">FigJam</span>
+                <span class="tag tag--secondary">UX Writing</span>
+                <span class="tag tag--secondary">Visual Design</span>
+                <span class="tag tag--secondary">Design Thinking</span>
+                <span class="tag tag--secondary">Agile</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
