Learning Grid CSS from a abstracted game called GridGarden, Highly recommended if you dont understand Grids with a simple video on youtube

--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
                 <span class="tag tag--secondary">Agile</span>
               </div>
             </div>
+            <div class="main-description__contact grid-item2">
+              <h3>Contact Info</h3>
+              <ul>
+                <li class="main-description__contact-link">
+                  leningraphic@gmail.com
+                </li>
+                <li class="main-description__contact-link">549 3513766049</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
