--- a/index.html
+++ b/index.html
@@ -50,20 +50,32 @@
             </p>
           </div>
         </div>
-        <div class="main-description__contact grid-item2">
+        <div class="main-description__contact">
           <h3>Contact Info</h3>
           <ul>
             <li class="main-description__contact-link">
-              leningraphic@gmail.com
+              <a
+                href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20"
+              >
+                leningraphic@gmail.com
+              </a>
             </li>
-            <li class="main-description__contact-link">549 3513766049</li>
+
+            <li class="main-description__contact-link">
+              <a href="tel:+6494461709">549-3513766049</a>
+            </li>
           </ul>
-          <h3>Contact Info</h3>
+
+          <h3>Portfolio</h3>
           <ul>
             <li class="main-description__contact-link">
-              leningraphic@gmail.com
+              <a href="https://bit.ly/m/LeninCuadra">Website</a>
             </li>
-            <li class="main-description__contact-link">549 3513766049</li>
+            <li class="main-description__contact-link">
+              <a href="https://bit.ly/LeninCuadra%C3%A2%C2%80%C2%93Linkedin">
+                LinkedIn
+              </a>
+            </li>
           </ul>
         </div>
         <!-- ADD COLUMN GRID FOR 2 ITEMS BELOW -->
@@ -240,45 +252,53 @@
           </div>
         </div>
         <div class="skill-set__wrapper">
-          <h3 class="skill-set__title">Languages</h3>
-          <ul>
-            <li>English (Advanced)</li>
-            <li>Spanish (Native)</li>
-          </ul>
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Languages</h3>
+            <ul>
+              <li>English (Advanced)</li>
+              <li>Spanish (Native)</li>
+            </ul>
+          </div>
 
-          <h3 class="skill-set__title">Skills</h3>
-          <ul>
-            <li>Product Design</li>
-            <li>UX/UI Design</li>
-            <li>Facilitation & Workshop</li>
-            <li>Mapping methods</li>
-            <li>Information Architecture</li>
-            <li>Analytical Mindset</li>
-            <li>Empathy</li>
-          </ul>
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Skills</h3>
+            <ul>
+              <li>Product Design</li>
+              <li>UX/UI Design</li>
+              <li>Facilitation & Workshop</li>
+              <li>Mapping methods</li>
+              <li>Information Architecture</li>
+              <li>Analytical Mindset</li>
+              <li>Empathy</li>
+            </ul>
+          </div>
 
-          <h3 class="skill-set__title">Tools</h3>
-          <ul>
-            <li>Figma</li>
-            <li>Adobe XD</li>
-            <li>Hotjar</li>
-            <li>Clarity</li>
-            <li>Google Analytics</li>
-            <li>Miro</li>
-            <li>FigJam</li>
-            <li>Jira</li>
-            <li>Google Sheets</li>
-            <li>Slack</li>
-            <li>Google Slides</li>
-            <li>Optimal Workshop</li>
-          </ul>
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Tools</h3>
+            <ul>
+              <li>Figma</li>
+              <li>Adobe XD</li>
+              <li>Hotjar</li>
+              <li>Clarity</li>
+              <li>Google Analytics</li>
+              <li>Miro</li>
+              <li>FigJam</li>
+              <li>Jira</li>
+              <li>Google Sheets</li>
+              <li>Slack</li>
+              <li>Google Slides</li>
+              <li>Optimal Workshop</li>
+            </ul>
+          </div>
 
-          <li class="skill-set__title">Understanding Technologies</li>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>Bootstrap</li>
-          </ul>
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Tech Stack</h3>
+            <ul>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
