Mi primera vez usando una libreria de JS y por supuesto, fracasando en el uso, ni ChatGPT me salva

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <button onclick="exportPDF()">Export 2 PDF</button>
+    <button onclick="elementToPrint()">Export 2 PDF</button>
 
     <div class="main-column">
       <!-- <h4>Hola Extraño ,gracias por visitar. Esto está WorkInProgress 🛠️👨🏻‍💻</h4>
@@ -34,7 +34,7 @@
       <br />
       <br /> -->
 
-      <div id="exportPDF">
+      <div id=" elementToPrint">
         <!-- TITLE; NAME AND ROLE -->
         <div class="the-grid">
           <div class="main-description-wrapper">
