--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>v.2 - (css)Lenin Cuadra - Resume</title>
     <script src="script.js"></script>
     <!-- EXPORT PDF LIBRARY -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-    <script src="exportPDF.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script src="exportPDF.js"></script>
     <!--  -->
     <!-- STYLE -->
     <link href="style.css" rel="stylesheet" />
@@ -20,7 +20,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body class="downloadcv" id="downloadcv">
     <div class="main-column">
       <!-- TITLE; NAME AND ROLE -->
       <div class="main-description-wrapper">
@@ -47,35 +47,45 @@
       <div class="main-description__contact-wrapper">
         <div class="main-description__contact-header-wrapper">
           <h3>Contact Info</h3>
-          <ul>
-            <li class="main-description__contact-link">
-              <a
-                href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20"
-              >
-                leningraphic@gmail.com
-              </a>
-            </li>
+          <div>
+            <ul class="main-description__contact-items-wrapper">
+              <li class="main-description__contact-link">
+                <a
+                  href="mailto:leningraphic@gmail.com?subject=Hey%20Lenin,%20I'm%20reaching%20out%20to%20you%20"
+                >
+                  leningraphic@gmail.com
+                </a>
+              </li>
 
-            <li class="main-description__contact-link">
-              <a href="tel:+6494461709">549-3513766049</a>
-            </li>
-          </ul>
+              <li class="main-description__contact-link">
+                <a href="tel:+6494461709">549-3513766049</a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="main-description__contact-header-wrapper">
           <h3>Portfolio</h3>
           <div class="main-description__portfolio-items-wrapper">
-            <div
-              class="main-description__contact-link main-description__contact-link__inline"
-            >
-              <a target="_blank" href="https://bit.ly/m/LeninCuadra">Web</a>
+            <div class="main-description__contact-link">
+              <a target="_blank" href="https://bit.ly/m/LeninCuadra">Website</a>
             </div>
             <p class="main-description__contact-link__inline">|</p>
             <div
               class="main-description__contact-link main-description__contact-link__inline"
             >
-              <a target="_blank" href="https://bit.ly/LeninCuadra–Linkedin">
+              <!-- main-description__contact-link__inline -->
+              <a target="_blank" href="https://bit.ly/LeninCuadra-Linkedin">
                 LinkedIn
               </a>
+            </div>
+
+            <!-- BUTTON for PDF -->
+            <!-- <p class="main-description__contact-link__inline">|</p> -->
+
+            <div
+              class="main-description__contact-link main-description__contact-link__inline"
+            >
+              <!-- <button onclick="exportPDF()">Down PDF</button> -->
             </div>
           </div>
         </div>
@@ -408,7 +418,7 @@
           </div>
         </div>
         <!-- CARD EXP #5 - NARANJA X-->
-        <div class="card-exp">
+        <div class="card-exp nx">
           <div class="card-exp__header-wrapper">
             <h2 class="card-exp__role">Product Designer</h2>
             <div class="card-exp__business-tags">
@@ -434,8 +444,9 @@
               <h4 class="tag card-exp__prod-built">SaaS</h4>
               <h4 class="tag card-exp__prod-built">Checkout</h4>
               <h4 class="tag card-exp__prod-built">Payment Link</h4>
-              <h4 class="tag card-exp__prod-built">Landing Page</h4>
+
               <h4 class="tag card-exp__prod-built">Developer Experience</h4>
+              <h4 class="tag card-exp__prod-built">Landing Page</h4>
             </div>
           </div>
 
@@ -666,84 +677,140 @@
           </div>
         </div>
       </div>
-
-      <div class="skill-set__wrapper">
-        <div class="skill-set__section">
-          <h3 class="skill-set__title">Languages</h3>
-          <ul>
-            <li>English (Advanced)</li>
-            <li>Spanish (Native)</li>
-          </ul>
-        </div>
-
-        <div class="skill-set__section">
-          <h3 class="skill-set__title">Skills</h3>
-          <ul>
-            <li>Product Design</li>
-            <li>UX/UI Design</li>
-            <li>Facilitation & Workshop</li>
-            <li>Mapping methods</li>
-            <li>Information Architecture</li>
-            <li>Analytical Mindset</li>
-            <li>Empathy</li>
-          </ul>
-        </div>
-
-        <div class="skill-set__section">
-          <h3 class="skill-set__title">Tools</h3>
-          <ul>
-            <li>Figma</li>
-            <li>Adobe XD</li>
-            <li>Hotjar</li>
-            <li>Clarity</li>
-            <li>Google Analytics</li>
-            <li>Miro</li>
-            <li>FigJam</li>
-            <li>Jira</li>
-            <li>Google Sheets</li>
-            <li>Slack</li>
-            <li>Google Slides</li>
-            <li>Optimal Workshop</li>
-          </ul>
-        </div>
-
-        <div class="skill-set__section">
-          <h3 class="skill-set__title">Tech Stack</h3>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>Bootstrap</li>
-          </ul>
-        </div>
-        <div class="skill-set__section">
-          <h3 class="skill-set__title">Interests</h3>
-          <div class="skill-set__sub-section">
-            <h4 class="skill-set__subtitle">—&nbsp; Business Interests</h4>
+      <div class="NEW-CONTAINER">
+        <div class="skill-set__wrapper">
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Languages</h3>
             <ul>
-              <li>Product</li>
-              <li>Technology</li>
-              <li>Business</li>
+              <li>English (Advanced)</li>
+              <li>Spanish (Native)</li>
             </ul>
           </div>
-          <div class="skill-set__sub-section">
-            <h4 class="skill-set__subtitle">—&nbsp; Marketing Interests</h4>
-            <ul>
-              <li>Growth</li>
-              <li>Marketing</li>
-              <li>Storytelling</li>
-            </ul>
-          </div>
-          <div class="skill-set__sub-section">
-            <h4 class="skill-set__subtitle">—&nbsp; Personal Interests</h4>
 
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Skills</h3>
             <ul>
-              <li>Leadership</li>
-              <li>Personal Growth</li>
-              <li>Specialty Coffee</li>
-              <li>Psychology</li>
-              <li>Blockchain & NFT</li>
+              <li>Product Design</li>
+              <li>UX/UI Design</li>
+              <li>Facilitation & Workshop</li>
+              <li>Mapping methods</li>
+              <li>Information Architecture</li>
+              <li>Analytical Mindset</li>
+              <li>Empathy</li>
             </ul>
           </div>
+
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Tools</h3>
+            <ul>
+              <li>Figma</li>
+              <li>Adobe XD</li>
+              <li>Hotjar</li>
+              <li>Clarity</li>
+              <li>Google Analytics</li>
+              <li>Miro</li>
+              <li>FigJam</li>
+              <li>Jira</li>
+              <li>Google Sheets</li>
+              <li>Slack</li>
+              <li>Google Slides</li>
+              <li>Optimal Workshop</li>
+            </ul>
+          </div>
+
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Tech Stack</h3>
+            <ul>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+          <div class="skill-set__section">
+            <h3 class="skill-set__title">Interests</h3>
+            <div class="skill-set__sub-section">
+              <h4 class="skill-set__subtitle">—&nbsp; Business Interests</h4>
+              <ul>
+                <li>Product</li>
+                <li>Technology</li>
+                <li>Business</li>
+              </ul>
+            </div>
+            <div class="skill-set__sub-section">
+              <h4 class="skill-set__subtitle">—&nbsp; Marketing Interests</h4>
+              <ul>
+                <li>Growth</li>
+                <li>Marketing</li>
+                <li>Storytelling</li>
+              </ul>
+            </div>
+            <div class="skill-set__sub-section">
+              <h4 class="skill-set__subtitle">—&nbsp; Personal Interests</h4>
+
+              <ul>
+                <li>Leadership</li>
+                <li>Personal Growth</li>
+                <li>Specialty Coffee</li>
+                <li>Psychology</li>
+                <li>Blockchain & NFT</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="push-to-bot">
+          <footer class="CTA">
+            <div class="CTA__contact-wrapper">
+              <div class="CTA__contact-header-wrapper">
+                <h3 class="CTA__title">Looking forward to connect!</h3>
+
+                <ul>
+                  <li class="CTA__contact-link">
+                    <a
+                      href="mailto:leningraphic@gmail.com?subject=Hey%20Lenin,%20I%20want%20to%20connect%20with%20you%20"
+                    >
+                      <!-- spanish message: href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20" -->
+                      Send me an email
+                    </a>
+                    <div>&nbsp;&nbsp;&nbsp;&nbsp;📩</div>
+                  </li>
+
+                  <li class="CTA__contact-link">
+                    <a
+                      target="_blank"
+                      href="https://bit.ly/LeninCuadra-Linkedin"
+                    >
+                      Let's chat on LinkedIn!
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;💬
+                  </li>
+
+                  <li class="CTA__contact-link">
+                    <a href="tel:+6494461709"></a>
+                  </li>
+                </ul>
+              </div>
+              <!-- <div class="CTA__contact-header-wrapper">
+                <h3>Portfolio</h3>
+                <div class="CTA__portfolio-items-wrapper">
+                  <div class="CTA__contact-link">
+                  
+                    <a target="_blank" href="https://bit.ly/m/LeninCuadra">
+                      Web
+                    </a>
+                  </div>
+                  
+                  <div class="CTA__contact-link">
+                    <a
+                      target="_blank"
+                      href="https://bit.ly/LeninCuadra-Linkedin"
+                    >
+                      LinkedIn
+                    </a>
+                  </div>
+                </div>
+              </div> -->
+            </div>
+          </footer>
         </div>
       </div>
     </div>
