Initial Commit - Spanish Version WIP, lets go

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>v.2 - (css)Lenin Cuadra - Resume</title>
+    <title>Lenin Cuadra - Curriculo</title>
     <script src="script.js"></script>
     <!-- EXPORT PDF LIBRARY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
