cambios en textos de mdos4 y otras correcciones de idioma o info repetida

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
               Creación de Diagramas: UserFlows y Sitemaps.
             </li>
             <li class="card-exp__responsabilities">
-              Definición y Estrategia de Microcopias de cada UI a favor de la
+              Definición y Estrategia de Microcopys de cada UI a favor de la
               Experiencia de Usuario.
             </li>
             <li class="card-exp__responsabilities">
@@ -475,10 +475,7 @@
               Utilización del Sistema de Diseño Zumo y sus Patrones de Diseño,
               basado en Material Design
             </li>
-            <li class="card-exp__responsabilities">
-              Use of the Zumo Design System and its Design Patterns, based on
-              Material Design
-            </li>
+
             <li class="card-exp__responsabilities">
               Comunicación constante con el Product Owner y los Desarrolladores
               del equipo para tomar decisiones en base a las tecnologías
@@ -594,7 +591,7 @@
 
           <ul class="card-exp__responsabilities__wrapper">
             <li class="card-exp__responsabilities">
-              Pruebas A/B de copias, imágenes y botones.
+              Pruebas A/B de copy, imágenes y botones.
             </li>
             <li class="card-exp__responsabilities">
               Pruebas con personal interno de la empresa.
@@ -603,9 +600,7 @@
             <li class="card-exp__responsabilities">
               Mapas de calor y grabaciones de visitas.
             </li>
-            <li class="card-exp__responsabilities">
-              Información obtenida de Google Analytics.
-            </li>
+
             <li class="card-exp__responsabilities">
               Creación de: Videos, imágenes, sliders, gifs y banners para la web
               y redes sociales.
@@ -659,16 +654,16 @@
 
           <ul class="card-exp__responsabilities__wrapper">
             <li class="card-exp__responsabilities">
-              Pruebas A/B de copias, imágenes y botones.
+              Estrategias de marketing para comunicación y posicionamiento del
+              producto.
             </li>
             <li class="card-exp__responsabilities">
-              Pruebas con el personal interno de la empresa.
+              Redacción, estrategia y contenido para presentaciones de negocios
+              B2B y B2G.
             </li>
             <li class="card-exp__responsabilities">
-              Mapas de calor y grabaciones de visitas.
-            </li>
-            <li class="card-exp__responsabilities">
-              Información obtenida de Google Analytics.
+              Creación de videos, imágenes, sliders, gifs y banners para app,
+              páginas web y redes sociales.
             </li>
           </ul>
 
@@ -721,7 +716,6 @@
             <ul>
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Bootstrap</li>
             </ul>
           </div>
           <div class="skill-set__section">
@@ -729,9 +723,9 @@
             <div class="skill-set__sub-section">
               <h4 class="skill-set__subtitle">—&nbsp; Intereses de negocio</h4>
               <ul>
-                <li>Product</li>
-                <li>Technology</li>
-                <li>Business</li>
+                <li>Producto</li>
+                <li>Tecnologías</li>
+                <li>Negocio</li>
               </ul>
             </div>
             <div class="skill-set__sub-section">
